<resources>
    <string name="app_name">Hipla Office</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="login_as_employee">Login as an Employee</string>
    <string name="password">Password</string>
    <string name="office">Office</string>
    <string name="smart">Smart</string>
    <string name="username">Username</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="create_account">Create an account for a seamless experience.\nPlease provide the following details</string>
    <string name="guest">Guest</string>
    <string name="employee">Employee</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="names">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="already_an_account">Already have an account?</string>
    <string name="or">- Or -</string>
    <string name="check_your_email">Enter a valid Username</string>
    <string name="check_your_password">Enter a valid Password</string>
    <string name="enetr_valid_username">Enter a valid Username</string>
    <string name="enetr_valid_password">Enter a valid Password</string>
    <string name="enetr_valid_fname">Enter your First Name</string>
    <string name="enetr_valid_lname">Enter your Last Name</string>
    <string name="enetr_valid_phone">Enter a valid Phone Number</string>
    <string name="enetr_valid_email">Enter a valid Email Id</string>
    <string name="enetr_valid_department">Enter your department</string>
    <string name="enetr_valid_designation">Enter your Designation</string>
    <string name="company">Company</string>
    <string name="please_try_again">Something went wrong. Please try again.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contact’s permission needed for providing email completion.</string>
    <string name="shedule">Schedule</string>
    <string name="meeting">Meeting</string>
    <string name="order">Order</string>
    <string name="food">FOOD</string>
    <string name="indbox">Inbox</string>
    <string name="message">Message</string>
    <string name="manage">Manage</string>
    <string name="upcoming">Upcoming</string>
    <string name="fixed_meeting">Fixed Meeting</string>
    <string name="flexible_meeting">Flexible Meeting</string>
    <string name="webex_meeting">WebEx Meeting</string>
    <string name="select_meeting_type">Select a meeting type</string>
    <string name="enter_information">Enter information about meeting</string>
    <string name="name">Name : </string>
    <string name="agenda">Agenda : </string>
    <string name="check_your_connection">Internet Connection Issues</string>
    <string name="confirm_meeting">Confirm Meeting</string>
    <string name="please_select_contact">Please select a contact to proceed.</string>
    <string name="please_select_timeslot">Please select a time slot to proceed.</string>
    <string name="please_select_appointment_location">Please select appointment location</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait...</string>
    <string name="please_select_date">Please select multiple dates to proceed</string>
    <string name="meeting_request_sent">Meeting Request Sent</string>
    <string name="meeting_on">Meeting on</string>
    <string name="meeting_with">Meeting with %s</string>
    <string name="once_meeting_confirmed">Once meeting is confirmed, will get notified with further details</string>
    <string name="to">to</string>
    <string name="this_slot_not_available">This slot\'s is not available</string>
    <string name="enter_agenda_for_the_meeting">Please enter agenda for the meeting</string>
    <string name="confirm">Confirm</string>
    <string name="ended">Ended</string>
    <string name="spotlight_search">Spotlight Search</string>
    <string name="my_appointments">My Meetings</string>
    <string name="request_received">Request Received</string>
    <string name="all">All</string>
    <string name="slash">/</string>
    <string name="pending">Pending</string>
    <string name="cancelled">Cancelled</string>
    <string name="confirmed">Confirmed</string>
    <string name="post">Post</string>
    <string name="type_review_here">Type review here</string>
    <string name="outbox">Outbox</string>
    <string name="menu">Menu</string>
    <string name="create_message">Create Message</string>
    <string name="title">Title :</string>
    <string name="title_hint">Type message title here</string>
    <string name="message_title">Enter your message here :</string>
    <string name="message_hint">Type message here</string>
    <string name="phone_no">Phone No :</string>
    <string name="choose">Choose</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="home">Home</string>
    <string name="manage_meeting">Manage Meeting</string>
    <string name="manage_meeting_tab">Manage\nMeeting</string>
    <string name="notification">Notification</string>
    <string name="control_panel">Control Panel</string>
    <string name="profile_management">Profile</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="set_avability">Set Availability</string>
    <string name="message_small">Message</string>
    <string name="change_password">Change Password</string>
    <string name="update_device_information">Update Device Information</string>
    <string name="distance_notification">Distance Notification On/Off</string>
    <string name="device_updated">Device Information Updated Successfully</string>
    <string name="new_password">New Password :</string>
    <string name="password_hint">Enter New Password</string>
    <string name="light_on">Light on</string>
    <string name="third">3rd</string>
    <string name="open_map">Open Map</string>
    <string name="open_door">Open Door</string>
    <string name="reconnect">Reconnect</string>
    <string name="meeting_cant_be_finished">Meeting is not finished till now.</string>
    <string name="you_will_be_late">You are going to be late for the meeting. Step out now.</string>
    <string name="you_will_reach_200m">You are about to reach your destination.</string>
    <string name="welcome_message">Welcome to Future Netwings. Connect to local wifi to gain access control.</string>
    <string name="you_will_late_and_reschedule">You are going to be late for the meeting. Try to reschedule the meeting.</string>
    <string name="meeting_over_can_extend">Your meeting is about to finish. You can extend your meeting.</string>
    <string name="want_to_extend">Do you want to extend this meeting?</string>
    <string name="reschedule_fixed_meeting">Reschedule Fixed Meeting</string>
    <string name="reschedule_flexible_meeting">Reschedule Flexible Meeting</string>
    <string name="reschedule_current_meeting">Reschedule Current Meeting</string>
    <string name="extend_meeting">Extend your current meeting</string>
    <string name="you_cant_cancel_meeting_now">You can\'t cancel the meeting now.</string>
    <string name="you_cant_end_meeting_now">You can\'t end the meeting now.</string>
    <string name="you_cant_start_meeting_now">You can\'t start the meeting now.</string>
    <string name="you_are_running_late">You are getting late for the meeting. Try to reach early.</string>
    <string name="room1">Conference Room</string>
    <string name="room2">Men’s Washroom</string>
    <string name="room3">Women’s Washroom</string>
    <string name="room4">Hot Desking</string>
    <string name="no_info_available">No Information Available</string>
    <string name="upcoming_meetings">Upcoming Meetings</string>
    <string name="schedule_your_meeting">Schedule Meeting</string>
    <string name="your_meeting">Your meeting</string>
    <string name="order_your_food">Order Food</string>
    <string name="manage_meetings">Manage Meetings</string>
    <string name="timings">Timing :</string>
    <string name="filter">Filter</string>
    <string name="all_notification">All Notification</string>
    <string name="clear">Clear All</string>
    <string name="meeting_type">Meeting Type :</string>
    <string name="add_belongings">Belongings</string>
    <string name="add_receipent">Recipients</string>
    <string name="date">Date :</string>
    <string name="meeting_dates">Meeting Dates :</string>
    <string name="meeting_timing">Meeting Timing :</string>
    <string name="your_messages">Your Messages</string>
    <string name="send_message">Send Message</string>
    <string name="to_header">To :</string>
    <string name="message_detail">Message Detail</string>
    <string name="enter_comments">Enter your comments</string>
    <string name="create_meeting">Create Meeting</string>
    <string name="please_select_appointment_date">Please select meeting date</string>
    <string name="emails">Email Id :</string>
    <string name="value">Value</string>
    <string name="Add_your_belongings_below">Add your belongings below</string>
    <string name="Add_your_recipients_below">Add your recipients below</string>
    <string name="item_name">Item Name</string>
    <string name="select_time_slot">Select time slot</string>
    <string name="reschedule">Reschedule</string>
    <string name="choose_your_category">Choose your category</string>
    <string name="confirm_your_order">Confirm your order</string>
    <string name="note">Any special request</string>
    <string name="you_cant_order_food_now">You can\'t order food now.</string>
    <string name="no_item_added_in_cart">No item added in cart</string>
    <string name="group_meeting">Group Meetings</string>
    <string name="wifi_password">WiFi Password : </string>
    <string name="please_select_option">Please select option</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="hot_desking">Hot Desking</string>
    <string name="select_option_to_proceed">Select option to proceed</string>
    <string name="navigate">Navigate</string>
    <string name="release_hot_desk">Release Desk</string>
    <string name="enable_your_gps_for_receive_alerts_for_meeting">Enable your GPS for receiving meeting alerts.</string>
    <string name="thank_you">Thank You For Using Our Service</string>
    <string name="timing_format">%s - %s</string>
    <string name="desk_zone_format">Desk Zone : %s</string>
    <string name="seat_name_format">Seat Number : %s</string>
    <string name="location_format">Location : %s</string>
    <string name="meeting_timing_format">Meeting Time : %s</string>
    <string name="name_format">Name : %s</string>
    <string name="email_format">Email : %s</string>
    <string name="phone_format">Phone : %s</string>
    <string name="title_format">Title : %s</string>
    <string name="no_upcoming_meetings">No Upcoming Meetings</string>
</resources>