<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/m5"
    android:background="@color/white"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="@dimen/m5"
            android:text="@string/please_select_option"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_extra_larg" />

        <TextView
            android:id="@+id/tv_open_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="@dimen/m5"
            android:text="@string/open_gallery"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_larg"
            android:layout_marginTop="@dimen/m10"/>

        <TextView
            android:id="@+id/tv_open_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="@dimen/m5"
            android:text="@string/open_camera"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_larg"
            android:layout_marginTop="@dimen/m5"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m40"
            android:layout_margin="@dimen/m10"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/text_light_gray"
            android:text="@string/cancel"
            android:textColor="@color/text_white"
            android:textSize="@dimen/_12ssp"
            />
    </LinearLayout>
</LinearLayout>