<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fragment"
            type="com.hipla.smartoffice_new.dialogs.IndboxReadDialogFragment" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_management"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/rounded_background"
            android:layout_above="@+id/btn_close">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/m45"
                    android:background="@color/colorPrimaryDark">

                    <ImageView
                        android:id="@+id/ivback"
                        android:layout_width="@dimen/_36sdp"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_action_back"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/ivappicon"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginLeft="@dimen/m5"
                        android:layout_toRightOf="@+id/ivback"
                        android:src="@drawable/toolbar_logo" />

                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="@dimen/m30"
                        android:layout_height="@dimen/m30"
                        android:layout_marginRight="@dimen/m10"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_close_gray" />

                </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m10"
                android:layout_marginTop="@dimen/m10"
                android:layout_marginRight="@dimen/m10"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="serif"
                    android:text="@string/name_format"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/m20"
                    android:fontFamily="serif"
                    android:text="@string/email_format"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/m20"
                    android:fontFamily="serif"
                    android:text="@string/phone_format"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/m20"
                    android:fontFamily="serif"
                    android:text="@string/title_format"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m10"
                android:layout_marginRight="@dimen/m10"
                android:layout_marginTop="@dimen/m20"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="serif"
                    android:text="@string/message"
                    android:textColor="@color/text_white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/tv_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/m10"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:gravity="top"
                    android:hint="@string/message_hint"
                    android:textColor="@color/text_white"
                    android:textColorHint="@color/text_white"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/btn_close"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_margin="@dimen/m20"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/text_larg"
            android:textColor="@color/text_white"
            android:text="@string/close"
            android:textAllCaps="true"
            android:gravity="center"
            android:background="@drawable/rounded_corner_blue"/>

    </RelativeLayout>

</layout>