<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.hipla.smartoffice_new.activity.ForgetPasswordActivity" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_home"
        tools:context="com.hipla.smartoffice_new.activity.ForgetPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/rounded_background">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/m40"
            android:layout_marginBottom="@dimen/m40">

            <ImageView
                android:id="@+id/imgViegHeader"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:src="@drawable/app_logo"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingLeft="@dimen/m15"
            android:paddingRight="@dimen/m15"
            android:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="serif"
                android:textColor="@color/text_light_gray"
                android:textColorHint="@color/text_light_gray"
                android:maxLines="1"
                android:backgroundTint="@color/line_gray"
                android:hint="@string/enter_your_email" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/m25">

            <TextView
                android:id="@+id/txtalredyaccopunt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_an_account"
                android:fontFamily="serif"
                android:textColor="@color/text_light_gray"
                android:textSize="@dimen/text_medium" />

            <TextView
                android:id="@+id/txtSignuplogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/m10"
                android:text="@string/login"
                android:fontFamily="monospace"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/text_larg"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/_180sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/m5"
            android:paddingRight="@dimen/m5"
            android:layout_marginTop="@dimen/m30">

            <Button
                android:id="@+id/loginB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_larg"
                android:fontFamily="serif"
                android:background="@drawable/rounded_corner_blue"/>
        </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</layout>